--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.gitignore.io/api/java,macos,eclipse
-# Edit at https://www.gitignore.io/?templates=java,macos,eclipse
+# Created by https://www.toptal.com/developers/gitignore/api/windows,java,eclipse
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,java,eclipse
 
 ### Eclipse ###
 .metadata
@@ -52,11 +52,16 @@ local.properties
 
 # Annotation Processing
 .apt_generated/
+.apt_generated_test/
 
 # Scala IDE specific (Scala & Java development for Eclipse)
 .cache-main
 .scala_dependencies
 .worksheet
+
+# Uncomment this line if you wish to ignore the project description file.
+# Typically, this file would be tracked if it contains build/dependency configurations:
+#.project
 
 ### Eclipse Patch ###
 # Eclipse Core
@@ -65,9 +70,7 @@ local.properties
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
-# Annotation Processing
-.apt_generated
-
+# Spring Boot Tooling
 .sts4-cache/
 
 ### Java ###
@@ -95,32 +98,30 @@ local.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-### macOS ###
-# General
-.DS_Store
-.AppleDouble
-.LSOverride
+### Windows ###
+# Windows thumbnail cache files
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
 
-# Icon must end with two \r
-Icon
+# Dump file
+*.stackdump
 
-# Thumbnails
-._*
+# Folder config file
+[Dd]esktop.ini
 
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-.com.apple.timemachine.donotpresent
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
 
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
+# Windows Installer files
+*.cab
+*.msi
+*.msix
+*.msm
+*.msp
 
-# End of https://www.gitignore.io/api/java,macos,eclipse
+# Windows shortcuts
+*.lnk
+
+# End of https://www.toptal.com/developers/gitignore/api/windows,java,eclipse
